--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
         <section class="main-section">
             <div class="card">
                 <div class="product-image-block">
-                    <img class="main-image" src="./assets/img/mug-fluted-contrast-33-cl-view-1-full.png" alt="Mug Fluted Contrast 33cl (view 1)">
-                    <div class="preview selected">
-                        <img src="./assets/img/mug-fluted-contrast-33-cl-view-2-thumbnail.png" alt="Mug Fluted Contrast 33cl (view 2)">
+                    <div class="main-image-wrapper">
+                        <img class="main-image" src="./assets/img/mug-fluted-contrast-33-cl-view-1-full.png" alt="Mug Fluted Contrast 33cl (view 1)">
                     </div>
-                    <div class="preview">
-                        <img src="./assets/img/mug-fluted-contrast-33-cl-view-3-thumbnail.png" alt="Mug Fluted Contrast 33cl (view 3)">
+                    <div class="previews-wrapper">
+                        <div class="preview selected">
+                            <img src="./assets/img/mug-fluted-contrast-33-cl-view-2-thumbnail.png" alt="Mug Fluted Contrast 33cl (view 2)">
+                        </div>
+                        <div class="preview">
+                            <img src="./assets/img/mug-fluted-contrast-33-cl-view-3-thumbnail.png" alt="Mug Fluted Contrast 33cl (view 3)">
+                        </div>
                     </div>
                 </div>
 
@@ -29,7 +33,7 @@
                     <p class="text">Fluted Contrast represents the perfect fusion between the aesthetic and the functional. The design is elegant and modern, created out of a deep respect for Royal British history and traditions</p>
                     <div class="colors">
                         <h2 class="title">Color options</h2>
-                        <ul>
+                        <ul class="color-items">
                             <li class="selected">
                                 <div class="circle blue"></div>
                             </li>
@@ -47,7 +51,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="wrapper">
                         <div>
                             <h2 class="title">Quantity</h2>
                             <select class="quantity" name="quantity" id="quantity">
